把醫學系名額分成個申 聯分 單招，取消中醫牙醫。

--- a/systemQuota.ejs
+++ b/systemQuota.ejs
@@ -240,16 +240,16 @@
 <table id="medicine_quota" style="border:4px #D499B9 solid;" cellpadding="10" border='1' align="center">
 	<tr>
 		<th style="border-right:3px #D499B9 solid;">學士班總實際招生名額</th>
-		<th>醫學系</th>
-		<th>牙醫系</th>
-		<th style="border-right:3px #D499B9 solid;">中醫系</th>
+		<th>醫學系個人申請名額</th>
+		<th>醫學系聯合分發名額</th>
+		<th style="border-right:3px #D499B9 solid;">醫學系單獨招生名額</th>
 		<th>其他科系可用名額</th>
 	</tr>
 	<tr>
 		<td style="border-right:3px #D499B9 solid; border-top:3px #D499B9 solid;"><input type="number" class="form-control" id="allowTotal_bache_2" disabled></td>
-		<td style="border-top:3px #D499B9 solid;"><input type="number" min="0" class="form-control" id="quota_medicine" required></td>
-		<td style="border-top:3px #D499B9 solid;"><input type="number" min="0" class="form-control" id="quota_dentist" required></td>
-		<td style="border-right:3px #D499B9 solid; border-top:3px #D499B9 solid;"><input type="number" min="0" class="form-control" id="quota_chinese_medicine" required></td>
+		<td style="border-top:3px #D499B9 solid;"><input type="number" min="0" class="form-control" id="quota_medicine_selection" disabled></td>
+		<td style="border-top:3px #D499B9 solid;"><input type="number" min="0" class="form-control" id="quota_medicine_placement" disabled></td>
+		<td style="border-right:3px #D499B9 solid; border-top:3px #D499B9 solid;"><input type="number" min="0" class="form-control" id="quota_medicine_self" disabled></td>
 		<td style="border-top:3px #D499B9 solid;"><input type="number" class="form-control" id="allow_except_medicine" disabled></td>
 	</tr>
 </table>
