--- a/index.ejs
+++ b/index.ejs
@@ -80,7 +80,7 @@
 		</div>
 	</div>
 
-	<div class="row">
+	<div class="row hide">
 		<div class="form-group col-12">
 			<div class="card">
 				<div class="card-header bg-primary text-white">
@@ -118,7 +118,7 @@
 		</div>
 	</div>
 
-	<div class="row">
+	<div class="row hide">
 		<div class="form-group col-12">
 			<div class="card">
 				<div class="card-header bg-primary text-white">
@@ -163,7 +163,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="row">
+	<div class="row hide">
 		<div class="form-group col-12">
 			<div class="card">
 				<div class="card-header bg-primary text-white">
@@ -205,7 +205,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="row">
+	<div class="row hide">
 		<div class="form-group col-12">
 			<div class="card">
 				<div class="card-header bg-primary text-white">
@@ -247,7 +247,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="row">
+	<div class="row hide">
 		<div class="form-group col-12">
 			<div class="card">
 				<div class="card-header bg-primary text-white">
