順手拿掉打錯的地方

--- a/components/_sidebar.ejs
+++ b/components/_sidebar.ejs
@@ -35,7 +35,7 @@
 						<a style="display: none" href="./deptInfoBache.html" class="list-group-item list-group-item-action <%= isActive('deptInfoBache') %> sub">學士班</a>
 						<a style="display: none" href="./deptInfoTwoYear.html" class="list-group-item list-group-item-action <%= isActive('deptInfoTwoYear') %> sub">港二技</a>
 						<a style="display: none" href="./deptInfoMaster.html" class="list-group-item list-group-item-action <%= isActive('deptInfoMaster') %> sub">碩士班</a>
-						<a style="display: none;" href="./deptInfoPhd.html" class="list-group-item list-group-item-action <%= isActive('deptInfoPhd') %> sub">博士班</a>
+						<a style="display: none" href="./deptInfoPhd.html" class="list-group-item list-group-item-action <%= isActive('deptInfoPhd') %> sub">博士班</a>
 						<a style="" href="./systemQuota.html" class="list-group-item list-group-item-action <%= isActive('systemQuota') %>">名額調查&nbsp;&nbsp;</a>
 					</div>
 				</div>
