--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -395,6 +395,16 @@
 																</div>
 															</div>
 														</div>
+														<!--填報系統上傳師長推薦函方式-->
+														<div id="recommendation-letter-upload-method-form" class="form-group col-6">
+															<select id="recommendation-letter-upload-method" class="form-control">
+																<option value="" style="display: none" selected disabled>===== 請選擇接受的系統上傳方式 =====</option>
+																<option value="0">接受學生及 email 邀請上傳</option>
+																<option value="1">僅接受學生自行上傳</option>
+																<option value="2">僅接受 email 邀請上傳</option>
+																<option value="-1" disabled>紙本推薦函（不透過系統上傳）</option>
+															</select>
+														</div>
 													</div>
 
 													<div id="paper-form-div">
