--- a/login.ejs
+++ b/login.ejs
@@ -64,7 +64,10 @@
 	<div class="col-md-12" style="text-align: center">
 		<ul>
 			<li>
-				回傳方式：確認名額無誤後，列印「簡章回覆表」並簽章，傳真或掃描電郵至本會（傳真號碼：049-2911182，電郵信箱：overseassurvey@gmail.com）始完成簡章填報作業。
+				帳號及密碼前以108年5月12日海聯試字第1082000596號函致送（諒達），請以附件之預設帳號及操作代碼登入。承辦人可於登入系統後自行更改操作代碼。
+			</li>
+			<li>
+				回傳方式：確認名額無誤後，列印「簡章回覆表」並簽章，傳真或掃描電郵至本會（傳真號碼：<a href="tel:+886-49-2911182">049-2911182</a>，電郵信箱：<a href="mailto:overseassurvey@gmail.com">overseassurvey@gmail.com</a>）始完成簡章填報作業。
 			</li>
 		</ul>
 	</div>
@@ -76,10 +79,10 @@
 				<a href=".." title="海外聯招會委員學校平台">最新消息</a>
 			</div>
 			<ul class="list-group list-group-flush">
-				<li class="list-group-item">
-					<a href="https://drive.google.com/file/d/1fy8Af7mlR2bEktlolXdcm4wIjW9EahGs/view?usp=sharing" target="_blank">
-						108 學年度各校名額調查及系所分則填報清冊
-					</a>
+<!--				<li class="list-group-item">-->
+<!--					<a href="https://drive.google.com/file/d/1fy8Af7mlR2bEktlolXdcm4wIjW9EahGs/view?usp=sharing" target="_blank">-->
+<!--						108 學年度各校名額調查及系所分則填報清冊-->
+<!--					</a>-->
 				</li>
 				<li class="list-group-item">
 					<a href="http://api.overseas.ncnu.edu.tw/forms/僑生及港澳生招生管道圖.docx">
