先不讓學校登入（之後開放就revert這顆commit）
加上警語、不給登入

--- a/login.ejs
+++ b/login.ejs
@@ -12,6 +12,10 @@
 
 <div class="row">
 	<div class="col-md-6 offset-md-3">
+		<div class="alert alert-danger mt-2 alert-emailVerify" role="alert">
+			<!--還沒開放啦乾別再問了-->
+			<strong>注意！</strong> <br />系統及資料尚未更新，預計 16 點開放。
+		</div>
 		<form>
 			<div class="form-group">
 				<div class="input-group">
@@ -52,7 +56,7 @@
 			</div>
 			-->
 			<div class="form-group">
-				<button type="button" class="btn btn-success btn-block" id="btn-login">登入</button>
+				<button type="button" class="btn btn-success btn-block" id="btn-login" disabled>登入</button>
 			</div>
 			<div class="form-group">
 				<p id="errMsg"></p>
