更新名額調查說明文字＋學校資料頁面右上的按鈕隱藏

--- a/index.ejs
+++ b/index.ejs
@@ -13,13 +13,13 @@
 		<ul class="list-inline">
 			<li class="list-inline-item">
 				<div class="col-3 offset-3 text-center float-left">
-					<a href="https://forms.gle/gwxaGDPWREsXsajNA" class="btn btn-primary btn-lg" target="_blank">
+					<a href="https://forms.gle/gwxaGDPWREsXsajNA" class="btn btn-primary btn-lg hide" target="_blank">
 						新增系所、系所變更類組或分組
 					</a>
 				</div>
 			</li>
 			<li class="list-inline-item">
-				<div class="col-3 offset-3 text-center float-left">
+				<div class="col-3 offset-3 text-center float-left hide">
 					<button class="btn btn-success btn-lg" id="downloadExcel">
 						下載學校清冊 Excel
 					</button>
