--- a/systemQuota.ejs
+++ b/systemQuota.ejs
@@ -271,11 +271,10 @@
 
 <div class="row" style="font-size:18px">
 	<ul>
-		<li>依據<a href="https://api.overseas.ncnu.edu.tw/forms/%E6%95%99%E8%82%B2%E9%83%A8108%E5%B9%B46%E6%9C%885%E6%97%A5%E8%87%BA%E6%95%99%E9%AB%98%E9%80%9A%E5%AD%97%E7%AC%AC1080077303%E8%99%9F%E5%87%BD.pdf">教育部108年6月5日臺教高通字第1080077303號函</a>辦理。</li>
-		<li>班別間名額流用：學校如因招生情形良好，名額不敷使用，或有選才需求之考量，得敘明招生概況及系所資源因應措施，並確認在符合「專科以上學校總量發展規模與資源條件標準」師資質量規定下，流用名額至其他班別，流用原因並請於備註欄位敘明。惟若該班別未規劃招收僑、港澳生，其外加名額不得流用至該班別。</li>
-		<li>本地生缺額：108學年度日學各班別本地生招生完畢後如有未招足之名額，可流用以相同班別之「僑、港澳生」補足(學士班需扣除學校保留作為下一學年度轉學招生名額，並應扣除已流用至外國學生之名額)；各校如有本地生缺額流用之規劃，請於備註欄位敘明名額流用來源系所名稱及名額數。進行本地生缺額流用規劃時應妥慎處理，不得重覆填列提報。</li>
-		<li>請於 6月24日（星期一）下午5時前 登入本系統填報109學年度各班別僑、港澳生招生名額需求（含招生名額增量調查表），確認無誤並列印系統產生之「109學年度僑、港澳生名額總量調查回覆表」，經單位主管簽章確認後，回傳至本會（電子郵件信箱：<a href="mailto:overseassurvey@gmail.com">overseassurvey@gmail.com</a>，傳真：<a href="tel:049-2911182">049-2911182</a>），始完成僑生名額填報作業。</li>
-		<li>欲申請僑、港澳生名額增量之學校，務必下載並填列<a href="https://api.overseas.ncnu.edu.tw/forms/109%E6%8B%9B%E7%94%9F%E5%90%8D%E9%A1%8D%E5%A2%9E%E9%87%8F%E8%AA%BF%E6%9F%A5%E8%A1%A8.xls">「109招生名額增量調查表」</a>，於108年6月24日（星期一）前併同「增量計畫書（包含品質控管策略及配套措施）備文報部核定並副知本會，調查表電子檔併寄至本會電子郵件信箱（overseassurvey@gmail.com）俾利彙整。</li>
+		<li>依據<a href="https://api.overseas.ncnu.edu.tw/forms/%E6%95%99%E8%82%B2%E9%83%A8109%E5%B9%B46%E6%9C%8810%E6%97%A5%E8%87%BA%E6%95%99%E9%AB%98%EF%BC%88%E5%9B%9B%EF%BC%89%E5%AD%97%E7%AC%AC1090078827%E8%99%9F%E5%87%BD.pdf">教育部109年6月10日臺教高（四）字第1090078827號函</a>辦理。</li>
+		<li>學校應通盤考量各招收外生管道所需名額（例如 : 與國外合作辦學專班、海聯聯合分發、個人申請及各校單招…等 )，如超過各班別「核定總量」之10%，得提出「班別間名額流用」、「本地生缺額流用」或「全校總量擴增」申請，惟應先規劃「班別間名額流用」，班別間流用後，某班別招生名額仍不敷使用時，得再進行「本地生缺額流用」或「全校總量擴增」(擇一或同時規劃)，惟均應先確認流用或擴增後各項生師比(全校生師比值、日間學制生師比值、研究生生師比值）符合總量之規定。未於事先申請且經本部核准者，不得於本部核定名額後，再以前開合作辦學或報名踴躍等理由，向本部提出名額調整。</li>
+		<li>請於 6月19日（星期五）下午5時前 登入本系統填報110學年度各班別僑、港澳生招生名額需求（含招生名額增量申請表），確認無誤並列印系統產生之「109學年度僑、港澳生名額總量調查回覆表」，經單位主管簽章確認後，回傳至本會（電子郵件信箱：<a href="mailto:overseassurvey@gmail.com">overseassurvey@gmail.com</a>，傳真：<a href="tel:+886-49-2911182"> 049-2911182</a>），始完成僑生名額填報作業。</li>
+		<li>欲申請僑、港澳生名額增量之學校，務必下載並填列「<a href="https://api.overseas.ncnu.edu.tw/forms/110%20%E5%AD%B8%E5%B9%B4%E5%BA%A6%E5%A4%A7%E5%AD%B8%E7%94%B3%E8%AB%8B%E5%83%91%E7%94%9F%20(%20%E5%90%AB%E6%B8%AF%E6%BE%B3%E7%94%9F%E5%8F%8A%E6%B8%AF%E6%BE%B3%E5%85%B7%E5%A4%96%E5%9C%8B%E5%9C%8B%E7%B1%8D%E4%B9%8B%E8%8F%AF%E8%A3%94%E5%AD%B8%E7%94%9F%20)%20%E6%8B%9B%E7%94%9F%E5%90%8D%E9%A1%8D%E5%A2%9E%E9%87%8F%E8%AA%BF%E6%9F%A5%E8%A1%A8.ods">110招生名額增量申請表</a>」，於109年6月19日（星期五）前併同提出增量原因、品質控管策略及配套措施，備文報部核定並副知本會，調查表電子檔併寄至本會電子郵件信箱（<a href="mailto:overseassurvey@gmail.com">overseassurvey@gmail.com</a>）俾利彙整。</li>
 	</ul>
 </div>
 
