--- a/login.ejs
+++ b/login.ejs
@@ -93,6 +93,11 @@
 						僑生及港澳生招生管道圖
 					</a>
 				</li>
+				<li class="list-group-item">
+					<a href="https://api.overseas.ncnu.edu.tw/forms/%E5%90%8D%E9%A1%8D%E6%9A%A8%E7%B0%A1%E7%AB%A0%E8%AA%BF%E6%9F%A5%E7%B3%BB%E7%B5%B1%E5%BF%98%E8%A8%98%E5%AF%86%E7%A2%BC%E7%94%B3%E8%AB%8B%E5%96%AE.docx">
+						名額暨簡章調查系統忘記密碼申請單.docx
+					</a>
+				</li>
 			</ul>
 		</div>
 	</div>
