disable 師資標準選項
今年教育部要求的，他們會直接給名單我們填入 db，不讓各校自己改

--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -215,7 +215,7 @@
 							</div>
 							<div id="teacherQualityPassedForm" class="form-group col-6">
 								<label class="form-control-label text-danger" for="">師資質量是否達「專科以上學校總量發展規模與資源條件標準」附表五所定基準*</label>
-								<select class="form-control" id="teacherQualityPassed">
+								<select class="form-control" id="teacherQualityPassed" disabled>
 									<option value="Y">已達所定基準</option>
 									<option value="N">未達所定基準（不得提供僑生名額）</option>
 								</select>
