--- a/login.ejs
+++ b/login.ejs
@@ -79,10 +79,10 @@
 				<a href=".." title="海外聯招會委員學校平台">最新消息</a>
 			</div>
 			<ul class="list-group list-group-flush">
-<!--				<li class="list-group-item">-->
-<!--					<a href="https://drive.google.com/file/d/1fy8Af7mlR2bEktlolXdcm4wIjW9EahGs/view?usp=sharing" target="_blank">-->
-<!--						108 學年度各校名額調查及系所分則填報清冊-->
-<!--					</a>-->
+				<li class="list-group-item">
+					<a href="https://drive.google.com/file/d/1_u2e1JYgNFZWZqq96fey6BkT7LDPS_BR/view?usp=sharing" target="_blank">
+						109 學年度各校名額調查及系所分則填報清冊
+					</a>
 				</li>
 				<li class="list-group-item">
 					<a href="http://api.overseas.ncnu.edu.tw/forms/僑生及港澳生招生管道圖.docx">
