暫存一下進度 要重灌了QQ

--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -473,6 +473,7 @@
 			</div>
 
 			<div class="modal-footer">
+				<button type="button" class="btn btn-info" id="deptPdf">預覽 PDF</button>
 				<button type="button" class="btn btn-primary" id="deptDetailSave">儲存</button>
         		<button type="button" class="btn btn-danger" data-dismiss="modal">離開</button>
 			</div>
