招生分組名稱讓學校可以自己填寫

--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -147,7 +147,7 @@
 							</div>
 							<div id="engTitleForm" class="form-group col-6">
 								<label class="form-control-label" for="">招生分組</label>
-								<input type="text" class="form-control" id="titleDivision" disabled>
+								<input type="text" class="form-control" id="titleDivision">
 							</div>
 						</div>
 						<div class="row">
