將按鈕上的分組拿掉。

--- a/index.ejs
+++ b/index.ejs
@@ -14,7 +14,7 @@
 			<li class="list-inline-item">
 				<div class="col-3 offset-3 text-center float-left">
 					<a href="https://forms.gle/gwxaGDPWREsXsajNA" class="btn btn-primary btn-lg hide" target="_blank">
-						新增系所、系所變更類組或分組
+						新增系所或系所變更類組
 					</a>
 				</div>
 			</li>
