系詳細資料中文簡介說明文字修改

--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -226,7 +226,10 @@
 								<label class="form-control-label text-danger" for="">中文系所簡介*</label><br />
 								<ol style="color: darkcyan; background-color: lightgoldenrodyellow; border-radius: 25px;">
 									<li>
-										請填寫系所簡介、課程領域、未來發展或招生特殊限制（如辨色異常、身心障礙及是否提供身心障礙學生學習輔具資源及生活照輔措施資源）等說明，以利學生先行了解並自行評估。
+										請填寫系所簡介、課程領域及未來發展等說明，以利學生了解該科系內容。
+									</li>
+									<li>
+										如有招生特殊限制（如辨色異常、身心障礙及是否提供身心障礙學生學習輔具資源及生活照輔措施資源），請依據教育部108年8月26日臺教高（四）字第1080114654號函之「各大專校院招生簡章校系分則說明或備註字句調整建議參考」撰寫系所分則說明或備註。
 									</li>
 									<li style="color:red;">
 										請勿在此填寫個人申請繳交資料說明。
