--- a/login.ejs
+++ b/login.ejs
@@ -94,6 +94,11 @@
 						名額暨簡章調查系統忘記密碼申請單.docx
 					</a>
 				</li>
+				<li class="list-group-item">
+					<a href="https://drive.google.com/file/d/1MSO-9BoC3E4QkuWqveGxXeJSWZUgdu4d/view">
+						110 學年度名額暨簡章調查系統操作說明會簡報
+					</a>
+				</li>
 			</ul>
 		</div>
 	</div>
