更新連結並取消隱藏問券按鈕

--- a/index.ejs
+++ b/index.ejs
@@ -13,7 +13,7 @@
 		<ul class="list-inline">
 			<li class="list-inline-item">
 				<div class="col-3 offset-3 text-center float-left">
-					<a href="https://forms.gle/gwxaGDPWREsXsajNA" class="btn btn-primary btn-lg hide" target="_blank">
+					<a href="https://docs.google.com/forms/d/e/1FAIpQLSeBGBSMQVQT1F8WwJmnrFLcaFT9JvvXnFJo2K0YlPBvbPJ2Qg/viewform?usp=pp_url" class="btn btn-primary btn-lg" target="_blank">
 						新增系所或系所變更類組
 					</a>
 				</div>
