--- a/systemQuota.ejs
+++ b/systemQuota.ejs
@@ -143,7 +143,7 @@
 		<th>欲使用名額</th>
 		<th>班別間流用 <i class="fa fa-info-circle" id="quota_passed_info" aria-hidden="true" data-toggle="tooltip" data-placement="top" data-animation="false" title="可以是負數，班別間流用相加為零即可。"></i></th>
 		<th>本地生缺額</th>
-		<th style="border-right:3px #CFAA9E solid;">申請110增量</th>
+		<th style="border-right:3px #CFAA9E solid;">申請<%= year -1910%>增量</th>
 		<th>總實際招生名額</th>
 	</tr>
 	<tr id="bachelor_quota">
@@ -197,7 +197,7 @@
 						<th>欲使用名額</th>
 						<th>班別間流用</th>
 						<th>本地生缺額</th>
-						<th style="border-right:3px #CFAA9E solid;">申請110增量</th>
+						<th style="border-right:3px #CFAA9E solid;">申請<%= year -1910%>增量</th>
 						<th>總實際招生名額</th>
 					</tr>
 					<tr id="bachelor_quota">
