--- a/login.ejs
+++ b/login.ejs
@@ -64,7 +64,7 @@
 	<div class="col-md-12" style="text-align: center">
 		<ul>
 			<li>
-				帳號及密碼前以108年5月12日海聯試字第1082000596號函致送（諒達），請以附件之預設帳號及操作代碼登入。承辦人可於登入系統後自行更改操作代碼。
+				帳號及密碼前以108年6月12日海聯試字第1082000596號函致送（諒達），請以附件之預設帳號及操作代碼登入。承辦人可於登入系統後自行更改操作代碼。
 			</li>
 			<li>
 				回傳方式：確認名額無誤後，列印「簡章回覆表」並簽章，傳真或掃描電郵至本會（傳真號碼：<a href="tel:+886-49-2911182">049-2911182</a>，電郵信箱：<a href="mailto:overseassurvey@gmail.com">overseassurvey@gmail.com</a>）始完成簡章填報作業。
@@ -76,27 +76,27 @@
 	<div class="col-lg-12">
 		<div class="card">
 			<div class="card-header">
-				<a href=".." title="海外聯招會委員學校平台">最新消息</a>
+				<a title="海外聯招會委員學校平台">最新消息</a>
 			</div>
 			<ul class="list-group list-group-flush">
-				<li class="list-group-item">
+				<li class="list-group-item hide">
 					<a href="https://drive.google.com/file/d/1_u2e1JYgNFZWZqq96fey6BkT7LDPS_BR/view?usp=sharing" target="_blank">
-						109 學年度各校名額調查及系所分則填報清冊
+						110 學年度各校名額調查及系所分則填報清冊
 					</a>
 				</li>
 				<li class="list-group-item">
-					<a href="http://api.overseas.ncnu.edu.tw/forms/僑生及港澳生招生管道圖.docx">
+					<a href="https://drive.google.com/file/d/1id0g-RYylTMBtnH3hTU0IiYi_N08CufW/view?usp=sharing">
 						僑生及港澳生招生管道圖
 					</a>
 				</li>
 				<li class="list-group-item">
-					<a href="https://api.overseas.ncnu.edu.tw/forms/%E5%90%8D%E9%A1%8D%E6%9A%A8%E7%B0%A1%E7%AB%A0%E8%AA%BF%E6%9F%A5%E7%B3%BB%E7%B5%B1%E5%BF%98%E8%A8%98%E5%AF%86%E7%A2%BC%E7%94%B3%E8%AB%8B%E5%96%AE.docx">
+					<a href="https://drive.google.com/file/d/1tW_J_exxw-H5OHuM37lKWKDLE3_xIxYC/view?usp=sharing">
 						名額暨簡章調查系統忘記密碼申請單.docx
 					</a>
 				</li>
-				<li class="list-group-item">
+				<li class="list-group-item hide">
 					<a href="https://drive.google.com/file/d/1MSO-9BoC3E4QkuWqveGxXeJSWZUgdu4d/view">
-						110 學年度名額暨簡章調查系統操作說明會簡報
+						111 學年度名額暨簡章調查系統操作說明會簡報
 					</a>
 				</li>
 				<li class="list-group-item">
