學校地址不給學校承辦人自己改。

--- a/index.ejs
+++ b/index.ejs
@@ -60,7 +60,7 @@
 	<div class="row">
 		<div id="addressForm" class="form-group col-12">
 			<label class="form-control-label text-danger" for="">學校中文地址*</label>
-			<input id="address" type="text" class="form-control">
+			<input id="address" type="text" class="form-control" disabled>
 		</div>
 	</div>
 	<div class="row">
