--- a/login.ejs
+++ b/login.ejs
@@ -85,22 +85,22 @@
 					</a>
 				</li>
 				<li class="list-group-item">
-					<a href="https://drive.google.com/file/d/1id0g-RYylTMBtnH3hTU0IiYi_N08CufW/view?usp=sharing">
+					<a target="_blank" href="https://drive.google.com/file/d/1id0g-RYylTMBtnH3hTU0IiYi_N08CufW/view?usp=sharing">
 						僑生及港澳生招生管道圖
 					</a>
 				</li>
 				<li class="list-group-item">
-					<a href="https://drive.google.com/file/d/1tW_J_exxw-H5OHuM37lKWKDLE3_xIxYC/view?usp=sharing">
+					<a target="_blank" href="https://drive.google.com/file/d/1tW_J_exxw-H5OHuM37lKWKDLE3_xIxYC/view?usp=sharing">
 						名額暨簡章調查系統忘記密碼申請單.docx
 					</a>
 				</li>
 				<li class="list-group-item hide">
-					<a href="https://drive.google.com/file/d/1MSO-9BoC3E4QkuWqveGxXeJSWZUgdu4d/view">
+					<a target="_blank" href="https://drive.google.com/file/d/1MSO-9BoC3E4QkuWqveGxXeJSWZUgdu4d/view">
 						111 學年度名額暨簡章調查系統操作說明會簡報
 					</a>
 				</li>
 				<li class="list-group-item">
-					<a href="https://api.overseas.ncnu.edu.tw/forms/%E5%90%84%E5%A4%A7%E5%B0%88%E6%A0%A1%E9%99%A2%E6%8B%9B%E7%94%9F%E7%B0%A1%E7%AB%A0%E6%A0%A1%E7%B3%BB%E5%88%86%E5%89%87%E8%AA%AA%E6%98%8E%E6%88%96%E5%82%99%E8%A8%BB%E5%AD%97%E5%8F%A5%E8%AA%BF%E6%95%B4%E5%BB%BA%E8%AD%B0%E5%8F%83%E8%80%83.pdf">
+					<a target="_blank" href="https://api.overseas.ncnu.edu.tw/forms/%E5%90%84%E5%A4%A7%E5%B0%88%E6%A0%A1%E9%99%A2%E6%8B%9B%E7%94%9F%E7%B0%A1%E7%AB%A0%E6%A0%A1%E7%B3%BB%E5%88%86%E5%89%87%E8%AA%AA%E6%98%8E%E6%88%96%E5%82%99%E8%A8%BB%E5%AD%97%E5%8F%A5%E8%AA%BF%E6%95%B4%E5%BB%BA%E8%AD%B0%E5%8F%83%E8%80%83.pdf">
 						各大專校院招生簡章校系分則說明或備註字句調整建議參考
 					</a>
 				</li>
