--- a/components/_sidebar.ejs
+++ b/components/_sidebar.ejs
@@ -25,18 +25,18 @@
 			<div class="row">
 				<div class="col-12">
 					<div id="menu" class="list-group">
-						<a style="display: none;" href="./index.html" class="list-group-item list-group-item-action <%= isActive('index') %>">學校資料</a>
-						<a style="display: none;" href="#" class="list-group-item list-group-item-action category">名額分配&nbsp;&nbsp;<small><i class="fa fa-chevron-down" aria-hidden="true"></i></small></a>
-						<a style="display: none;" href="./quotaDistributionBache.html" class="list-group-item list-group-item-action <%= isActive('quotaDistributionBache') %> sub">學士班</a>
-						<a style="display: none;" href="./quotaDistributionTwoYear.html" class="list-group-item list-group-item-action <%= isActive('quotaDistributionTwoYear') %> sub">港二技</a>
-						<a style="display: none;" href="./quotaDistributionMaster.html" class="list-group-item list-group-item-action <%= isActive('quotaDistributionMaster') %> sub">碩士班</a>
-						<a style="display: none;" href="./quotaDistributionPhd.html" class="list-group-item list-group-item-action <%= isActive('quotaDistributionPhd') %> sub">博士班</a>
-						<a style="display: none;" href="#" class="list-group-item list-group-item-action category">系所資料&nbsp;&nbsp;<small><i class="fa fa-chevron-down" aria-hidden="true"></i></small></a>
-						<a style="display: none;" href="./deptInfoBache.html" class="list-group-item list-group-item-action <%= isActive('deptInfoBache') %> sub">學士班</a>
-						<a style="display: none;" href="./deptInfoTwoYear.html" class="list-group-item list-group-item-action <%= isActive('deptInfoTwoYear') %> sub">港二技</a>
-						<a style="display: none;" href="./deptInfoMaster.html" class="list-group-item list-group-item-action <%= isActive('deptInfoMaster') %> sub">碩士班</a>
-						<a style="display: none;" href="./deptInfoPhd.html" class="list-group-item list-group-item-action <%= isActive('deptInfoPhd') %> sub">博士班</a>
-						<a style="" href="./systemQuota.html" class="list-group-item list-group-item-action <%= isActive('systemQuota') %>">名額調查&nbsp;&nbsp;</a>
+						<a style="" href="./index.html" class="list-group-item list-group-item-action <%= isActive('index') %>">學校資料</a>
+						<a style="" href="#" class="list-group-item list-group-item-action category">名額分配&nbsp;&nbsp;<small><i class="fa fa-chevron-down" aria-hidden="true"></i></small></a>
+						<a style="" href="./quotaDistributionBache.html" class="list-group-item list-group-item-action <%= isActive('quotaDistributionBache') %> sub">學士班</a>
+						<a style="" href="./quotaDistributionTwoYear.html" class="list-group-item list-group-item-action <%= isActive('quotaDistributionTwoYear') %> sub">港二技</a>
+						<a style="" href="./quotaDistributionMaster.html" class="list-group-item list-group-item-action <%= isActive('quotaDistributionMaster') %> sub">碩士班</a>
+						<a style="" href="./quotaDistributionPhd.html" class="list-group-item list-group-item-action <%= isActive('quotaDistributionPhd') %> sub">博士班</a>
+						<a style="" href="#" class="list-group-item list-group-item-action category">系所資料&nbsp;&nbsp;<small><i class="fa fa-chevron-down" aria-hidden="true"></i></small></a>
+						<a style="" href="./deptInfoBache.html" class="list-group-item list-group-item-action <%= isActive('deptInfoBache') %> sub">學士班</a>
+						<a style="" href="./deptInfoTwoYear.html" class="list-group-item list-group-item-action <%= isActive('deptInfoTwoYear') %> sub">港二技</a>
+						<a style="" href="./deptInfoMaster.html" class="list-group-item list-group-item-action <%= isActive('deptInfoMaster') %> sub">碩士班</a>
+						<a style="" href="./deptInfoPhd.html" class="list-group-item list-group-item-action <%= isActive('deptInfoPhd') %> sub">博士班</a>
+						<a style="display: none" href="./systemQuota.html" class="list-group-item list-group-item-action <%= isActive('systemQuota') %>">名額調查&nbsp;&nbsp;</a>
 					</div>
 				</div>
 			</div>
