更新登入畫面檔案連結文字

--- a/login.ejs
+++ b/login.ejs
@@ -91,7 +91,7 @@
 				</li>
 				<li class="list-group-item">
 					<a target="_blank" href="https://drive.google.com/file/d/1tW_J_exxw-H5OHuM37lKWKDLE3_xIxYC/view?usp=sharing">
-						名額暨簡章調查系統忘記密碼申請單.docx
+						名額暨簡章調查系統忘記密碼申請單
 					</a>
 				</li>
 				<li class="list-group-item">
