--- a/login.ejs
+++ b/login.ejs
@@ -80,18 +80,8 @@
 			</div>
 			<ul class="list-group list-group-flush">
 				<li class="list-group-item">
-					<a href="https://drive.google.com/drive/folders/1jSJpJCvbVRfVtAOVJFbDlymAPh9f0GIv?usp=sharing" target="_blank">
-						110 學年度各校名額調查及系所分則填報清冊
-					</a>
-				</li>
-				<li class="list-group-item">
 					<a target="_blank" href="https://drive.google.com/file/d/1id0g-RYylTMBtnH3hTU0IiYi_N08CufW/view?usp=sharing">
-						僑生及港澳生招生管道圖
-					</a>
-				</li>
-				<li class="list-group-item">
-					<a target="_blank" href="https://drive.google.com/file/d/1tW_J_exxw-H5OHuM37lKWKDLE3_xIxYC/view?usp=sharing">
-						名額暨簡章調查系統忘記密碼申請單
+						111學年度僑、港澳生招生管道說明（公文附件一）
 					</a>
 				</li>
 				<li class="list-group-item">
@@ -102,6 +92,16 @@
 				<li class="list-group-item">
 					<a target="_blank" href="https://bbb.ncnu.edu.tw/b/kcc-wh9-z4q">
 						8/16（10:30）系統操作問題諮詢視訊會議
+					</a>
+				</li>
+				<li class="list-group-item">
+					<a target="_blank" href="https://drive.google.com/drive/folders/1jSJpJCvbVRfVtAOVJFbDlymAPh9f0GIv?usp=sharing">
+						各校上（110）年各學制校系分則規定
+					</a>
+				</li>
+				<li class="list-group-item">
+					<a target="_blank" href="https://drive.google.com/file/d/1tW_J_exxw-H5OHuM37lKWKDLE3_xIxYC/view?usp=sharing">
+						名額暨簡章調查系統忘記密碼申請單
 					</a>
 				</li>
 			</ul>
