登入畫面檔案連結文字修改

--- a/login.ejs
+++ b/login.ejs
@@ -86,12 +86,12 @@
 				</li>
 				<li class="list-group-item">
 					<a target="_blank" href="https://ior.ad/7ESG">
-						111 學年度名額暨簡章調查系統操作手冊
+						111 學年度名額暨簡章調查系統操作手冊（公文附件二）
 					</a>
 				</li>
 				<li class="list-group-item">
 					<a target="_blank" href="https://bbb.ncnu.edu.tw/b/kcc-wh9-z4q">
-						8/16（10:30）系統操作問題諮詢視訊會議
+						系統操作問題諮詢視訊會議（8/16 上午 10:30）
 					</a>
 				</li>
 				<li class="list-group-item">
