--- a/login.ejs
+++ b/login.ejs
@@ -91,7 +91,7 @@
 				</li>
 				<li class="list-group-item">
 					<a target="_blank" href="https://bbb.ncnu.edu.tw/b/kcc-wh9-z4q">
-						系統操作問題諮詢視訊會議（8/16 上午 10:30）
+						系統操作問題諮詢視訊會議連結（8/16 上午 10:30）
 					</a>
 				</li>
 				<li class="list-group-item">
