新增延期公告。

--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -1,6 +1,8 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootstrap-sortable/2.0.0/bootstrap-sortable.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/css/bootstrap-datepicker.standalone.min.css">
-
+<div class="alert alert-danger mt-2 alert" role="alert">
+	<strong>請注意：</strong> 因教育部核定系名作業尚未完成，本系統原訂 8 月 20 日（五）開放鎖定，擬配合順延至 8 月 27 日（五）開放。
+</div>
 <div class="row">
 	<div class="col-6 text-left">
 		<h2>學制資訊</h2>
