--- a/login.ejs
+++ b/login.ejs
@@ -8,6 +8,9 @@
 			名額暨簡章調查系統
 		</span>
 	</nav>
+	<div class="alert alert-danger mt-2 alert" role="alert">
+		<strong>請注意：</strong> 因教育部核定系名作業尚未完成，本系統原訂 8 月 27 日（五）截止填報，擬配合順延至 9 月 3 日（五）止。
+	</div>
 </header>
 
 <div class="row">
