更新鎖定及截止時間延後公告文字

--- a/login.ejs
+++ b/login.ejs
@@ -9,7 +9,7 @@
 		</span>
 	</nav>
 	<div class="alert alert-danger mt-2 alert" role="alert">
-		<strong>請注意：</strong> 因教育部核定系名作業尚未完成，本系統原訂 8 月 27 日（五）截止填報，擬配合順延至 9 月 3 日（五）止。
+		<strong>請注意：</strong> 因教育部核定系名作業因素，本系統將於 8 月 27 日（五）開放鎖定功能，原訂 8 月 27 日（五）截止填報，擬配合順延至 9 月 3 日（五）止。
 	</div>
 </header>
 
