Revert "更新核定系名隱藏系所資料鎖定按鈕。"
This reverts commit 98ef2c8fdaee834f4b0b5ce571d11c56f75f8770.

--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -32,8 +32,8 @@
 			<% } -%>
 		</button>
 
-		<span class="d-inline-block hide" tabindex="0" data-toggle="tooltip" title="請先鎖定學校資料！" id="lockSystem-tooltip">
-			<button class="btn btn-danger hide" id="lockSystem-btn" >
+		<span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="請先鎖定學校資料！" id="lockSystem-tooltip">
+			<button class="btn btn-danger " id="lockSystem-btn" >
 				確認送出並鎖定
 			</button>
 		</span>
