--- a/quotaDistributionMaster.ejs
+++ b/quotaDistributionMaster.ejs
@@ -1,2 +1,1 @@
-<% var system = '碩士班'; %>
-<% include components/_quotaDistribution %>
+<%- include ('components/_quotaDistribution', {system: '碩士班'}) %>
