--- a/quotaDistributionPhd.ejs
+++ b/quotaDistributionPhd.ejs
@@ -1,2 +1,1 @@
-<% var system = '博士班'; %>
-<% include components/_quotaDistribution %>
+<%- include ('components/_quotaDistribution', {system: '博士班'}) %>
