--- a/quotaDistributionTwoYear.ejs
+++ b/quotaDistributionTwoYear.ejs
@@ -1,2 +1,1 @@
-<% var system = '港二技'; %>
-<% include components/_quotaDistribution %>
+<%- include ('components/_quotaDistribution', {system: '港二技'}) %>
