修改登入畫面文字號及排版

--- a/login.ejs
+++ b/login.ejs
@@ -53,10 +53,10 @@
 	</div>
 </div>
 <div class="row" style="padding-bottom: 5%; color:crimson;">
-	<div class="col-md-12" style="text-align: center">
+	<div class="col-md-12">
 		<ul>
 			<li>
-				帳號及密碼前以108年6月12日海聯試字第1082000596號函致送（諒達），請以附件之預設帳號及操作代碼登入。承辦人可於登入系統後自行更改操作代碼。
+				帳號及密碼前以 110 年 01 月 20 日海聯試字第 1113000006 號函致送（諒達），請以附件之預設帳號及操作代碼登入。承辦人可於登入系統後自行更改操作代碼。
 			</li>
 			<li>
 				回傳方式：確認名額無誤後，列印「簡章回覆表」並簽章，傳真或掃描電郵至本會（傳真號碼：<a href="tel:+886-49-2911182">049-2911182</a>，電郵信箱：<a href="mailto:overseassurvey@gmail.com">overseassurvey@gmail.com</a>）始完成簡章填報作業。
