使用 env 新增變數 stage 自動辨別切換目前是那一階段的簡章調查。

--- a/components/_sidebar.ejs
+++ b/components/_sidebar.ejs
@@ -25,18 +25,18 @@
 			<div class="row">
 				<div class="col-12">
 					<div id="menu" class="list-group">
-						<a style="" href="./index.html" class="list-group-item list-group-item-action <%= isActive('index') %>">學校資料</a>
-						<a style="" href="#" class="list-group-item list-group-item-action category">名額分配&nbsp;&nbsp;<small><i class="fa fa-chevron-down" aria-hidden="true"></i></small></a>
-						<a style="" href="./quotaDistributionBache.html" class="list-group-item list-group-item-action <%= isActive('quotaDistributionBache') %> sub">學士班</a>
-						<a style="" href="./quotaDistributionTwoYear.html" class="list-group-item list-group-item-action <%= isActive('quotaDistributionTwoYear') %> sub">港二技</a>
-						<a style="" href="./quotaDistributionMaster.html" class="list-group-item list-group-item-action <%= isActive('quotaDistributionMaster') %> sub">碩士班</a>
-						<a style="" href="./quotaDistributionPhd.html" class="list-group-item list-group-item-action <%= isActive('quotaDistributionPhd') %> sub">博士班</a>
-						<a style="" href="#" class="list-group-item list-group-item-action category">系所資料&nbsp;&nbsp;<small><i class="fa fa-chevron-down" aria-hidden="true"></i></small></a>
-						<a style="" href="./deptInfoBache.html" class="list-group-item list-group-item-action <%= isActive('deptInfoBache') %> sub">學士班</a>
-						<a style="" href="./deptInfoTwoYear.html" class="list-group-item list-group-item-action <%= isActive('deptInfoTwoYear') %> sub">港二技</a>
-						<a style="" href="./deptInfoMaster.html" class="list-group-item list-group-item-action <%= isActive('deptInfoMaster') %> sub">碩士班</a>
-						<a style="" href="./deptInfoPhd.html" class="list-group-item list-group-item-action <%= isActive('deptInfoPhd') %> sub">博士班</a>
-						<a style="display: none" href="./systemQuota.html" class="list-group-item list-group-item-action <%= isActive('systemQuota') %>">名額調查&nbsp;&nbsp;</a>
+						<a href="./index.html" class="list-group-item list-group-item-action second-stage-item <%= isActive('index') %> hide">學校資料</a>
+						<a href="#" class="list-group-item list-group-item-action second-stage-item category hide">名額分配&nbsp;&nbsp;<small><i class="fa fa-chevron-down hide" aria-hidden="true"></i></small></a>
+						<a href="./quotaDistributionBache.html" class="list-group-item list-group-item-action second-stage-item <%= isActive('quotaDistributionBache') %> sub hide">學士班</a>
+						<a href="./quotaDistributionTwoYear.html" class="list-group-item list-group-item-action second-stage-item <%= isActive('quotaDistributionTwoYear') %> sub hide">港二技</a>
+						<a href="./quotaDistributionMaster.html" class="list-group-item list-group-item-action second-stage-item <%= isActive('quotaDistributionMaster') %> sub hide">碩士班</a>
+						<a href="./quotaDistributionPhd.html" class="list-group-item list-group-item-action second-stage-item <%= isActive('quotaDistributionPhd') %> sub hide">博士班</a>
+						<a href="#" class="list-group-item list-group-item-action second-stage-item category hide">系所資料&nbsp;&nbsp;<small><i class="fa fa-chevron-down hide" aria-hidden="true"></i></small></a>
+						<a href="./deptInfoBache.html" class="list-group-item list-group-item-action second-stage-item <%= isActive('deptInfoBache') %> sub hide">學士班</a>
+						<a href="./deptInfoTwoYear.html" class="list-group-item list-group-item-action second-stage-item <%= isActive('deptInfoTwoYear') %> sub hide">港二技</a>
+						<a href="./deptInfoMaster.html" class="list-group-item list-group-item-action second-stage-item <%= isActive('deptInfoMaster') %> sub hide">碩士班</a>
+						<a href="./deptInfoPhd.html" class="list-group-item list-group-item-action second-stage-item <%= isActive('deptInfoPhd') %> sub hide">博士班</a>
+						<a href="./systemQuota.html" class="list-group-item list-group-item-action first-stage-item <%= isActive('systemQuota') %> hide">名額調查&nbsp;&nbsp;</a>
 					</div>
 				</div>
 			</div>
