名額調查表格填寫範例底下新增說明

--- a/systemQuota.ejs
+++ b/systemQuota.ejs
@@ -232,6 +232,14 @@
 					</tr>
 				</table>
 			</div>
+			<div class="form-group col-9 offset-1">
+				<label for="comment" style="font-weight: bold;font-size:larger">說明：</label>
+				<textarea class="form-control" rows="5" style="resize:none;" disabled>
+					學士班實際招生名額為100名(原招生名額為123名，減去學士班流用名額23名)；
+					碩士班實際招生名額為90名(原招生名額為66名，加上碩士班流用名額19名，碩士班本地缺額5名)；
+					博士班實際招生名額為15名(原招生名額為9名，加上博士班流用名額4名，申請名額增量2名)。
+				</textarea>
+			</div>			
 		</div>
 	</div>
 </div>
