更新年份、日期、文字號，拿掉去年的公告文字。

--- a/login.ejs
+++ b/login.ejs
@@ -8,9 +8,6 @@
 			名額暨簡章調查系統
 		</span>
 	</nav>
-	<div class="alert alert-danger mt-2 alert" role="alert">
-		<strong>請注意：</strong> 因教育部核定系名作業因素，本系統將於 8 月 27 日（五）開放鎖定功能，原訂 8 月 27 日（五）截止填報，擬配合順延至 9 月 3 日（五）止。
-	</div>
 </header>
 
 <div class="row">
@@ -56,10 +53,10 @@
 	<div class="col-md-12">
 		<ul>
 			<li>
-				帳號及密碼前以 110 年 01 月 20 日海聯試字第 1113000006 號函致送（諒達），請以附件之預設帳號及操作代碼登入。承辦人可於登入系統後自行更改操作代碼。
+				帳號及密碼前以 111 年 01 月 20 日海聯試字第1113000006號函致送（諒達），請以貴校預設帳號及操作代碼登入。承辦人可於登入系統後自行更改操作代碼。
 			</li>
 			<li>
-				回傳方式：確認名額無誤後，列印「簡章回覆表」並簽章，傳真或掃描電郵至本會（傳真號碼：<a href="tel:+886-49-2911182">049-2911182</a>，電郵信箱：<a href="mailto:overseassurvey@gmail.com">overseassurvey@gmail.com</a>）始完成簡章填報作業。
+				回傳方式：確認名額無誤後，於 6 月 10 日（星期五）下午 5 時前，列印「簡章回覆表」並簽章，傳真或掃描電郵至本會（傳真號碼：<a href="tel:+886-49-2911182">049-2911182</a>，電郵信箱：<a href="mailto:overseassurvey@gmail.com">overseassurvey@gmail.com</a>）始完成簡章填報作業。
 			</li>
 		</ul>
 	</div>
@@ -73,22 +70,32 @@
 			<ul class="list-group list-group-flush">
 				<li class="list-group-item">
 					<a target="_blank" href="https://drive.google.com/file/d/1id0g-RYylTMBtnH3hTU0IiYi_N08CufW/view?usp=sharing">
-						111學年度僑、港澳生招生管道說明（公文附件一）
+						112 學年度僑、港澳生招生管道說明及管道圖
 					</a>
 				</li>
-				<li class="list-group-item">
+				<!-- <li class="list-group-item">
 					<a target="_blank" href="https://ior.ad/7ESG">
-						111 學年度名額暨簡章調查系統操作手冊（公文附件二）
+						112 學年度名額暨簡章調查系統操作手冊（公文附件二）
 					</a>
 				</li>
 				<li class="list-group-item">
 					<a target="_blank" href="https://bbb.ncnu.edu.tw/b/kcc-wh9-z4q">
 						系統操作問題諮詢視訊會議連結（8/16 上午 10:30）
 					</a>
+				</li> -->
+				<li class="list-group-item">
+					<a target="_blank" href="https://drive.google.com/file/d/109ZCkb6nMv7GYGeHNhmJqJoaxcR93XCz/view?usp=sharing">
+						教育部111年5月13日臺教高(四)字第1110042972號函(含填表說明)
+					</a>
+				</li>
+				<li class="list-group-item">
+					<a target="_blank" href="https://drive.google.com/file/d/1iYnkbjm0gql-5ivaPHVAxsDX5hXdyHFH/view?usp=sharing">
+						112招生名額增量申請表
+					</a>
 				</li>
 				<li class="list-group-item">
 					<a target="_blank" href="https://drive.google.com/drive/folders/1jSJpJCvbVRfVtAOVJFbDlymAPh9f0GIv?usp=sharing">
-						各校上（110）年各學制校系分則規定
+						各校上（111）年各學制校系分則規定
 					</a>
 				</li>
 				<li class="list-group-item">
