--- a/systemQuota.ejs
+++ b/systemQuota.ejs
@@ -277,11 +277,11 @@
 <hr />
 
 
-<div class="row" style="font-size:18px">
+<div class="row" style="font-size:18px; width: 95%;">
 	<ul>
-		<li>依據<a href="https://drive.google.com/file/d/109ZCkb6nMv7GYGeHNhmJqJoaxcR93XCz/view?usp=sharing" target="_blank">教育部110年5月14日臺教高（四）字第1100062047號函（含附件一系統填報說明）</a>辦理。</li>
-		<li>請於5月31日（星期一）下午5時前登入本系統填報111學年度各班別僑、港澳生招生名額需求（含招生名額增量申請表），確認無誤並列印系統產生之「111學年度僑、港澳生名額總量調查回覆表」，經單位主管簽章確認後，回傳至本會（電子郵件信箱：<a href="mailto:overseassurvey@gmail.com">overseassurvey@gmail.com</a>，傳真：<a href="tel:+886-49-2911182"> 049-2911182</a>），始完成僑生名額填報作業。</li>
-		<li>欲申請僑、港澳生名額增量之學校，務必下載並填列「<a href="https://drive.google.com/file/d/1iYnkbjm0gql-5ivaPHVAxsDX5hXdyHFH/view?usp=sharing" target="_blank">111招生名額增量申請表</a>」，於110年5月31日（星期一）前併同提出增量原因、品質控管策略及配套措施，備文報部核定並副知本會，調查表電子檔併寄至本會電子郵件信箱（<a href="mailto:overseassurvey@gmail.com">overseassurvey@gmail.com</a>）俾利彙整。</li>
+		<li>依據<a href="https://drive.google.com/file/d/109ZCkb6nMv7GYGeHNhmJqJoaxcR93XCz/view?usp=sharing" target="_blank">教育部111年5月13日臺教高（四）字第1110042972號函（含填表說明）</a>辦理。</li>
+		<li>請於 6 月 10 日（星期五）下午 5 時前登入本系統填報112學年度各班別僑、港澳生招生名額需求（含招生名額增量申請表），確認無誤並列印系統產生之「112學年度僑、港澳生名額總量調查回覆表」，經單位主管簽章確認後，回傳至本會（電子郵件信箱：<a href="mailto:overseassurvey@gmail.com">overseassurvey@gmail.com</a>，傳真：<a href="tel:+886-49-2911182"> 049-2911182</a>），始完成僑生名額填報作業。</li>
+		<li>欲申請僑、港澳生名額增量之學校，務必下載並填列「<a href="https://drive.google.com/file/d/1iYnkbjm0gql-5ivaPHVAxsDX5hXdyHFH/view?usp=sharing" target="_blank">112招生名額增量申請表</a>」，於 111 年 05 月 31 日（星期二）前併同提出增量原因、品質控管策略及配套措施，備文報部核定並副知本會，調查表電子檔併寄至本會電子郵件信箱（<a href="mailto:overseassurvey@gmail.com">overseassurvey@gmail.com</a>）俾利彙整。</li>
 	</ul>
 </div>
 
