--- a/_layout.ejs
+++ b/_layout.ejs
@@ -11,7 +11,9 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="https://api.overseas.ncnu.edu.tw/0verseas-favicons/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="https://api.overseas.ncnu.edu.tw/0verseas-favicons/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="https://api.overseas.ncnu.edu.tw/0verseas-favicons/favicon-16x16.png">
-	<link rel="manifest" href="https://api.overseas.ncnu.edu.tw/0verseas-favicons/manifest.json">
+	<link rel="icon" type="image/png" sizes="384x384" href="https://api.overseas.ncnu.edu.tw/0verseas-favicons/android-chrome-384x384.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="https://api.overseas.ncnu.edu.tw/0verseas-favicons/android-chrome-192x192.png">
+	<!-- <link rel="manifest" href="https://api.overseas.ncnu.edu.tw/0verseas-favicons/manifest.json"> -->
 	<link rel="mask-icon" href="https://api.overseas.ncnu.edu.tw/0verseas-favicons/safari-pinned-tab.svg" color="#5bbad5">
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
