--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -51,63 +51,40 @@
 		</div>
 	</div>
 </div>
-<!-- 碩博only -->
-<div class="row masterOnly phdOnly hide">
-	<div class="col-2">
-		<div class="form-group">
-			<small id="" class="form-text text-muted"><%= year - 1910%> 聯招小計</small>
-			<input type="text" class="form-control admissionSum quota" disabled>
-		</div>
-	</div>
-	<span class="operator">＋</span>
-	<div class="col-2">
-		<div class="form-group">
-			<small id="" class="form-text text-danger"><%= year - 1910%> 單招小計*</small>
-			<input type="number" min="0" class="form-control bg-success text-white selfSum quota graduated_self_enrollment_quota required">
-		</div>
-	</div>
-	<span class="operator">＝</span>
-	<div class="col-3">
-		<div class="form-group">
-			<small id="" class="form-text text-muted">總計</small>
-			<input type="text" class="form-control quota wantTotal" disabled>
-		</div>
-	</div>
-</div>
-<!-- 學only -->
-<div class="row bacheOnly hide">
+<!-- 學士學制（含二技）only -->
+<div class="row bacheOnly twoYearOnly hide">
 	<div style="width:9%; margin-left:15px"><!--class="col-1"-->
 		<div class="form-group">
 			<small class="form-text text-muted">學士班個人申請</small>
-			<input type="text" class="form-control bg-info text-white quota admission_selection_quota" disabled>
+			<input type="text" class="form-control bg-info text-white quota bacheloar_admission_selection_quota" disabled>
 		</div>
 	</div>
 	<span class="operator">＋</span>
 	<div style="width:9%;"> <!--class="col-1"-->
 		<div class="form-group">
 			<small id="" class="form-text text-muted">學士班聯合分發</small>
-			<input type="text" class="form-control bg-info text-white quota admission_placement_quota" disabled>
+			<input type="text" class="form-control bg-info text-white quota bacheloar_admission_placement_quota" disabled>
 		</div>
 	</div>
 	<span class="operator">＋</span>
 	<div style="width:9%;"> <!--class="col-1"-->
 		<div class="form-group">
 			<small id="" class="form-text text-muted">港二技聯招</small>
-			<input type="text" class="form-control bg-info text-white quota another_department_admission_selection_quota" disabled>
+			<input type="text" class="form-control bg-info text-white quota twoTech_admission_selection_quota" disabled>
 		</div>
 	</div>
 	<span class="operator">＋</span>
 	<div style="width:8%;"> <!--class="col-1"-->
 		<div class="form-group">
-			<small id="" class="form-text text-danger">學士班單招*</small>
-			<input type="number" min="0" class="form-control bg-success text-white quota self_enrollment_quota required">
+			<small id="" class="form-text bacheloar_self_enrollment_text">學士班單招*</small>
+			<input type="text" min="0" class="form-control bg-success text-white quota bacheloar_self_enrollment_quota required" disabled>
 		</div>
 	</div>
 	<span class="operator">＋</span>
 	<div style="width:8%;"> <!--class="col-1"-->
 		<div class="form-group">
-			<small id="" class="form-text text-muted">港二技單招</small>
-			<input type="text" class="form-control bg-success text-white quota another_department_self_enrollment_quota" disabled>
+			<small id="" class="form-text twoTech_self_enrollment_text">港二技單招</small>
+			<input type="text" class="form-control bg-success text-white quota twoTech_self_enrollment_quota" disabled>
 		</div>
 	</div>
 	<span class="operator">＝</span>
@@ -118,64 +95,26 @@
 		</div>
 	</div>
 </div>
-<!-- 二only -->
-<div class="row twoYearOnly hide">
-	<div style="width:9%; margin-left:15px"> <!--class="col-1"-->
-		<div class="form-group">
-			<small class="form-text text-muted">學士班個人申請</small>
-			<input type="text" class="form-control bg-info text-white quota another_department_admission_selection_quota" disabled>
-		</div>
-	</div>
-	<span class="operator">＋</span>
-	<div style="width:9%;"> <!--class="col-1"-->
-		<div class="form-group">
-			<small id="" class="form-text text-muted">學士班聯合分發</small>
-			<input type="text" class="form-control bg-info text-white quota another_department_admission_placement_quota" disabled>
-		</div>
-	</div>
-	<span class="operator">＋</span>
-	<div style="width:9%;"> <!--class="col-1"-->
-		<div class="form-group">
-			<small id="" class="form-text text-muted">港二技聯招</small>
-			<input type="text" class="form-control bg-info text-white quota admission_selection_quota" disabled>
-		</div>
-	</div>
-	<span class="operator">＋</span>
-	<div style="width:8%;"> <!--class="col-1"-->
-		<div class="form-group">
-			<small id="" class="form-text text-muted">學士班單招</small>
-			<input type="text" class="form-control bg-success text-white quota another_department_self_enrollment_quota twoyear" disabled>
-		</div>
-	</div>
-	<span class="operator">＋</span>
-	<div style="width:8%;"> <!--class="col-1"-->
-		<div class="form-group">
-			<small id="" class="form-text text-danger">港二技單招*</small>
-			<input type="number" min="0" class="form-control bg-success text-white quota self_enrollment_quota twoyear required">
-		</div>
-	</div>
-	<span class="operator">＝</span>
-	<div class="col-3">
-		<div class="form-group">
-			<small id="" class="form-text text-muted">總計</small>
-			<input type="text" class="form-control quota wantTotal" disabled>
-		</div>
-	</div>
-</div>
-<!-- 學二only -->
-<div class="row bacheOnly twoYearOnly hide">
-	<span>　</span>
-	<div style="width:33%;"> <!--class="col-3 "-->
+
+<div class="row">
+	<div class="col-2 admissionSumDiv" style="width:33%;"> <!--class="col-3 "-->
 		<div class="form-group">
 			<small id="" class="form-text text-muted"><%= year - 1910%> 聯招小計</small>
 			<input type="text" class="form-control bg-info text-white quota admissionSum" disabled>
 		</div>
 	</div>
-	<span>　　　</span>
-	<div style="width:19%;"> <!--class="col-2"-->
+	<span class="operator sumAddSymbol">＋</span>
+	<div class="col-2 selfSumDiv" style="width:19%;"> <!--class="col-2"-->
 		<div class="form-group">
 			<small id="" class="form-text text-muted"><%= year - 1910%> 單招小計</small>
-			<input type="text" class="form-control bg-success text-white quota selfSum" disabled>
+			<input type="text" min="0" class="form-control bg-success text-white quota selfSum" disabled>
+		</div>
+	</div>
+	<span class="operator sumEqualSymbol masterOnly phdOnly hide">＝</span>
+	<div class="col-3 masterOnly phdOnly hide">
+		<div class="form-group">
+			<small id="" class="form-text text-muted">總計</small>
+			<input type="text" class="form-control quota wantTotal" disabled>
 		</div>
 	</div>
 </div>
