--- a/addNewDepartment.ejs
+++ b/addNewDepartment.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.0.8/pagination.css">
 
-<h2 class="text-center title">新增系所</h2>
+<h2 class="text-center title">新增或變更系所</h2>
 
 <hr>
 
@@ -11,31 +11,36 @@
             <div class="card-header bg-primary text-white">注意事項</div>
             <div class="card-body">
                 <p>
-                    <!-- 依據本會<a href="https://cmn-hant.overseas.ncnu.edu.tw/sites/default/files/inline-files/01_111%E9%A6%AC%E4%BE%86%E8%A5%BF%E4%BA%9E.pdf" target="_blank">馬來西亞地區簡章（2022年秋季入學適用）</a>：
+                    <strong class="text-danger">新增請求說明</strong>
                     <ol>
                         <li>
-                            如因COVID-19疫情，致報名時尚未取得 華文獨中統考/ STPM/ A-level/ SPM/ O-level 等文憑，須於所持會考文憑成績公布後5個日曆天內，至本頁面登錄會考成績，上傳並提交成績證明文件（例：含個人基本資料之成績報告或網上成績查詢界面截圖等）。
+                            請先選擇學制。
                         </li>
                         <li>
-                            未於各梯次分發作業前完成上傳提交者，一律不予分發。
+                            接著選擇要進行的動作。
                         </li>
                         <li>
-                            申請人須對登錄成績之正確性及提交證明之真實性負責。凡有不實、偽造、冒用或變造等情事，一經查實即予取消報名或撤銷錄取資格；已註冊入學者，撤銷其學籍，且不發給任何相關學業證明；畢業後始發現者，由學校撤銷畢業資格，並追繳或註銷學位證書。
-                        </li>
-                    </ol> -->
-                </p>
-                <!-- <p>
-                    <strong class="text-danger">使用說明</strong>
-                    <ol>
-                        <li>
-                            SPM成績公布日：2022年6月16日（四）<br/>
-                            <a class="text-danger">SPM成績上傳提交期限：2022年6月20日（一）中午12時止</a>
+                            然後選擇學系類型。
                         </li>
                         <li>
-                            請於本頁面完成「登錄及上傳文憑成績」步驟（除原申請單位另行通知您需補件外，原則上您無須特意將會考文憑成績單紙本文件送交原申請單位。）
+                            之後選擇學系類組。
+                        </li>
+                        <li>
+                            最後填寫核定系名。
                         </li>
                     </ol>
-                </p> -->
+                </p>
+                <p>
+                    <strong class="text-danger">請求填寫說明</strong>
+                    <ol>
+                        <li>
+                            請記得點擊請求，填寫詳細資訊並上傳核定公文。
+                        </li>
+                        <li>
+                            填寫完畢並確認無誤後，請按下發送請求按鈕。
+                        </li>
+                    </ol>
+                </p>
             </div>
         </div>
 
