新增或變更系所 頁面 修改
已發送或已完成請求，改為可點擊查看。

--- a/addNewDepartment.ejs
+++ b/addNewDepartment.ejs
@@ -268,7 +268,7 @@
                                             可接受副檔名為 <strong class="text-danger">pdf、jpg、png</strong> 的檔案，單一個檔案大小需 <strong class="text-danger">小於 4 Mbytes</strong> 。
                                         </div>
 
-                                        <div class="row" style="margin-bottom: 15px;">
+                                        <div class="row btn-upload" style="margin-bottom: 15px;">
                                             <div class="col-12">
                                                 <input type="file" class="filestyle file-upload" id="file-upload"
                                                 data-btnClass="btn-success"
