港二技系所類型只能選一般系所

--- a/addNewDepartment.ejs
+++ b/addNewDepartment.ejs
@@ -81,7 +81,7 @@
                             <option value="-1" selected disabled hidden>請先選擇學制</option>
                             <option value="0">一般系所</option>
                             <option value="1">重點產業系所</option>
-                            <option value="2">國際專修班</option>
+                            <option value="2">國際專修部</option>
                         </select>
                     </th>
                     <th>
